[gd_scene load_steps=2 format=3 uid="uid://cg0ye35prm6jt"]

[ext_resource type="Script" path="res://addons/letstalkaboutit/graph_items/talk_set_flag.gd" id="1_bsrde"]

[node name="TalkSetFlag" type="GraphNode"]
title = "SetFlag"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_bsrde")

[node name="ID" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ID"]
layout_mode = 2
text = "ID"

[node name="Control" type="Control" parent="ID"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="ID"]
layout_mode = 2
text = "0"
alignment = 2
max_length = 6

[node name="NextID" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="NextID"]
layout_mode = 2
text = "NextID"

[node name="Spacer" type="Control" parent="NextID"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="NextID"]
layout_mode = 2
text = "-1"
alignment = 2
max_length = 6

[node name="FlagName" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FlagName"]
layout_mode = 2
text = "FlagName"

[node name="Spacer" type="Control" parent="FlagName"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="FlagName"]
layout_mode = 2
size_flags_horizontal = 8
text = "default_flag_name"
alignment = 2
max_length = 32
expand_to_text_length = true

[node name="FlagValue" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FlagValue"]
layout_mode = 2
text = "FlagValue"

[node name="Spacer" type="Control" parent="FlagValue"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="FlagValue"]
layout_mode = 2
